# file-routes

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
django_fs_routes/: routes.py  test_routes.py
django_fs_routes/frameworks/: django.py
django_fs_routes/tests/: django_settings.py  test_routes.py
examples/django-simple-example/: manage.py
examples/django-simple-example/app/routes/: view.py
examples/django-simple-example/app/views/: view.py
examples/django-simple-example/simple/: asgi.py  settings.py  urls.py  wsgi.py
examples/flask-simple-example/: app.py
examples/flask-simple-example/routes/: class.py  function.py
src/file_routes/: directoryvisitor.py  filerouteinfo.py  inspection.py  route.py  utils.py
src/file_routes/frameworks/: django.py  flask.py
src/file_routes/tests/: test_routes.py
src/fs_routes/: inspection.py  routes.py
src/fs_routes/frameworks/: django.py
src/fs_routes/tests/: django_settings.py  test_routes.py
