[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django_fs_routes"
description = "File system based routing for Django"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Johan Dahlin", email = "jdahlin@gmail.com" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "django >= 4.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest >=7.1.3,<8.0.0",
    "coverage[toml] >= 6.5.0,<7.0",
    "mypy ==0.991",
    "ruff ==0.0.212",
    "black == 22.12.0",
    "isort >=5.0.6,<6.0.0",
    "django-stubs >= 1.13.1"
]

[tool.coverage.run]
parallel = true
source = [
    "django_fs_routes"
]
context = '${CONTEXT}'

[tool.hatch.version]
path = "django_fs_routes/__init__.py"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts =[
    "--no-migrations",
    "--show-capture=stdout",
    "--tb=short",
    "-W error::Warning",
    "-vv"
]
filterwarnings = []
python_files = ["tests.py", "test_*.py", "*_tests.py"]
DJANGO_SETTINGS_MODULE = "django_fs_routes.tests.django_settings"
testpaths = "user"
